--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -33,10 +33,10 @@ bindsym $mod+Shift+q kill
 bindsym $mod+q kill
 
 bindsym $mod+d exec dmenu_run
-bindsym $mod+g exec echo "" | rofi -dmenu -p "Google:" | xargs -I{} xdg-open https://www.google.com.br/search?q={}
+bindsym $mod+g exec echo "" | rofi -dmenu -p "Google:" -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://www.google.com.br/search?q={}
 bindsym $mod+Shift+g exec echo "" | rofi -dmenu -p "DDG:" | xargs -I{} xdg-open https://duckduckgo.com/?q={}
 
-bindsym $mod+Shift+x exec i3lock-fancy -f "Iosevka-Thin" -t "Arch Linux" -p -g -- scrot -z
+bindsym $mod+Shift+x exec i3lock-fancy -f "Iosevka-Thin" -t "Arch Linux" -p -g -- scrot -z | amixer -q -D pulse sset Master mute
 
 bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+ unmute
 bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 5%- unmute
@@ -66,6 +66,8 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
+bindsym $mod+Shift+c move position center
+
 bindsym $mod+h split h
 bindsym $mod+v split v
 
@@ -81,12 +83,13 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
+# Icones:            
 set $workspace1  "1:  "
 set $workspace2  "2:  "
 set $workspace3  "3:  "
 set $workspace4  "4:  "
 set $workspace5  "5:  "
-set $workspace6  "6:  "
+set $workspace6  "6:  "
 set $workspace7  "7:  "
 set $workspace8  "8:  "
 set $workspace9  "9:  "
@@ -116,7 +119,7 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
-bindsym $mod+Shift+c reload
+#bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 bindsym $mod+Shift+minus move scratchpad
@@ -157,6 +160,7 @@ assign [class="^Gimp"] $workspace5
 assign [class="^Inkscape"] $workspace5
 assign [class="^Lxappearance"] $workspace5
 assign [class="^Steam"] $workspace6
+assign [class="^mpv"] $workspace6
 assign [class="^Deluge"] $workspace7
 assign [class="^Thunderbird"] $workspace8
 assign [class="^Telegram"] $workspace9
