--- a/home/lucas/.config/compton.conf
+++ b/home/lucas/.config/compton.conf
@@ -92,6 +92,7 @@ shadow-exclude = [
     "name *= 'Chromium'",
     "name *= 'Chrome'",
     "class_g = 'Conky'",
+    "class_g = 'dzen title'",
     "class_g = 'Kupfer'",
     "class_g = 'Synapse'",
     "class_g ?= 'Notify-osd'",
