modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3/scripts/mpd 	modified:   home/lucas/.config/i3/scripts/wallpaper 	modified:   home/lucas/.config/ncmpcpp/config 	modified:   home/lucas/.config/rofi/scripts/power 	modified:   home/lucas/.config/termite/config 	modified:   home/lucas/.xinitrc 	new file:   home/lucas/bin/getimg.sh

--- a/home/lucas/.config/termite/config
+++ b/home/lucas/.config/termite/config
@@ -1,5 +1,6 @@
 [options]
-font = DejaVu Sans Mono 10
+#DejaVu Sans Mono 10
+font = Hack 10
 use_xft = true
 allow_bold = true
 #audible_bell = false
