--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -123,6 +123,10 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
+# move to workspaces
+bindsym $mod+Control+Right workspace next
+bindsym $mod+Control+Left workspace prev
+
 #bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
@@ -226,7 +230,7 @@ bar {
     font pango:Hack, FontAwesome 10
     strip_workspace_numbers yes
 	colors {
-		statusline 		$branco
+		statusline		$branco
 		background		$transparente
 		separator		$separador
 
