--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -25,8 +25,9 @@ http {
 	##ssl_stapling_verify on;
 	#resolver 8.8.8.8 8.8.4.4 valid=300s; # Google DNS Servers
 	#resolver_timeout 5s;
-    	include				mime.types;
-    	default_type  		application/octet-stream;
+	include				mime.types;
+	default_type		application/octet-stream;
+	disable_symlinks off;
 
     sendfile        on;
     #tcp_nopush     on;
@@ -41,5 +42,5 @@ http {
 	client_max_body_size 200m;
 	fastcgi_read_timeout 300;
 
-	include 			/etc/nginx/sites.d/*.conf;
+	include			/etc/nginx/sites.d/*.conf;
 }
