modified:   etc/rc.local 	modified:   home/lucas/.bash_aliases 	modified:   home/lucas/.bashrc 	modified:   home/lucas/.config/i3/blocks 	modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3/scripts/blank 	modified:   home/lucas/.config/i3/scripts/wifi 	deleted:    home/lucas/.config/mpv/encoding-profiles.conf 	modified:   home/lucas/.config/mpv/mpv.conf 	deleted:    home/lucas/.config/mpv/mpv.conf.orig 	new file:   home/lucas/.config/powerline/colorschemes/shell/sistematico.json 	modified:   home/lucas/.config/powerline/themes/shell/__main__.json 	modified:   home/lucas/.config/rofi/scripts/apps 	modified:   home/lucas/.config/rofi/scripts/configs 	new file:   home/lucas/.config/systemd/user/background-change.timer 	new file:   home/lucas/.config/systemd/user/feh-wallpaper.timer 	new file:   home/lucas/.config/systemd/user/gnome-background-change.timer 	new file:   home/lucas/.config/systemd/user/mate-background-change.timer 	new file:   home/lucas/.config/systemd/user/wallpaper.timer 	modified:   home/lucas/.tmux.conf 	new file:   home/lucas/.vim/after/ftdetect/i3config.vim 	new file:   home/lucas/.vim/after/syntax/i3config.vim 	new file:   home/lucas/.vimrc 	modified:   home/lucas/.xinitrc 	modified:   home/lucas/.xprofile 	modified:   home/lucas/.zshrc 	new file:   home/lucas/bin/hextogpl.sh 	modified:   home/lucas/bin/hextorgb.sh 	modified:   home/lucas/bin/screencast.sh 	new file:   usr/share/i3lock-fancy/icons/lockdark.png

--- a/home/lucas/.tmux.conf
+++ b/home/lucas/.tmux.conf
@@ -11,13 +11,13 @@ set-option -g base-index 1
 set -g mouse on
 
 # Statusbar 
-set -g status-right "#(uptime|awk '{print $11}') #(date)"
-set -g display-time 3000
-set -g status-bg black
-set -g status-fg cyan
-set-window-option -g window-status-current-attr bright,reverse
-set-window-option -g window-status-current-bg cyan
-set-window-option -g window-status-current-fg black
+#set -g status-right "#(uptime|awk '{print $11}') #(date)"
+#set -g display-time 3000
+#set -g status-bg black
+#set -g status-fg cyan
+#set-window-option -g window-status-current-attr bright,reverse
+#set-window-option -g window-status-current-bg cyan
+#set-window-option -g window-status-current-fg black
 
 # Binds
 bind k kill-server
@@ -68,4 +68,5 @@ send-keys -t:9 'man tmux' C-m
 # Troca o índice de 0 pra 1
 select-window -t 1
 
-#source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+#source "/usr/share/tmux/powerline.conf"
