--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -38,7 +38,7 @@ bindsym $mod+q kill
 
 bindsym $mod+d exec dmenu_run
 bindsym $mod+g exec echo "" | rofi -dmenu -p "Google:" -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://www.google.com.br/search?q={}
-bindsym $mod+Shift+g exec echo "" | rofi -dmenu -p "DDG:" | xargs -I{} xdg-open https://duckduckgo.com/?q={}
+bindsym $mod+Shift+g exec echo "" | rofi -dmenu -p "DuckDuckGo:" -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://duckduckgo.com/?q={}
 
 bindsym $mod+Shift+x exec i3lock-fancy -f "Iosevka-Thin" -t "Arch Linux" -p -g -- scrot -z | amixer -q -D pulse sset Master mute
 
@@ -158,6 +158,7 @@ for_window [class="^Viewnior"] floating enable
 for_window [class="^Agave"] floating enable
 for_window [title="Mail do iCloud - Chromium"] floating enable, move position center
 for_window [title="i3 Wallpaper"] floating enable, move position center
+for_window [title="About Mozilla Firefox"] floating enable, move position center
 
 assign [class="^Chromium"] $workspace1
 assign [class="Firefox"] $workspace1
@@ -246,7 +247,7 @@ exec --no-startup-id /home/lucas/bin/wallpaper.sh -r
 exec --no-startup-id compton -b
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/dunst/dunstrc
-exec --no-startup-id parcellite
+exec --no-startup-id clipit
 exec --no-startup-id sudo headsetcontrol 64
 exec --no-startup-id /usr/local/bin/xautolock.sh
 exec --no-startup-id /usr/lib/vino/vino-server
