modified:   home/lucas/.bashrc 	modified:   home/lucas/.config/rofi/scripts/apps 	modified:   home/lucas/.tmux.conf

--- a/home/lucas/.tmux.conf
+++ b/home/lucas/.tmux.conf
@@ -35,7 +35,7 @@ bind -n F8 select-window -t 8
 bind -n F9 select-window -t 9
 
 # Nova sessão e janelas
-new -s tmux-caos -n Workflow
+new -s tmux -n Workflow
 
 # 2
 neww -n Web
