new file:   etc/X11/xorg.conf.d/00-keyboard.conf 	modified:   etc/environment 	modified:   home/lucas/.bashrc 	modified:   home/lucas/.config/i3/blocks 	modified:   home/lucas/.config/i3/config 	new file:   home/lucas/.config/i3/scripts/blank.old 	modified:   home/lucas/.config/i3/scripts/wallpaper 	modified:   home/lucas/.config/i3/scripts/weather 	modified:   home/lucas/.config/mpv/mpv.conf 	modified:   home/lucas/.config/ncmpcpp/config 	renamed:    home/lucas/.config/ncmpcpp/config.galdino -> home/lucas/.config/ncmpcpp/config.2 	copied:     home/lucas/.config/ncmpcpp/config -> home/lucas/.config/ncmpcpp/config.sistematico 	new file:   home/lucas/.config/ranger/bookmarks 	new file:   home/lucas/.config/ranger/history 	new file:   home/lucas/.config/ranger/rc.conf 	new file:   home/lucas/.config/ranger/scope.sh 	new file:   home/lucas/.config/ranger/tagged 	modified:   home/lucas/.config/rofi/scripts/apps 	modified:   home/lucas/.local/share/applications/telegram.desktop 	modified:   home/lucas/.xinitrc 	modified:   home/lucas/.xprofile 	modified:   home/lucas/bin/archupdate.sh 	new file:   home/lucas/bin/ping.sh 	modified:   home/lucas/bin/wallpaper.sh 	modified:   usr/local/bin/xautolock.sh 	new file:   usr/share/backgrounds/default 	new file:   usr/share/gvfs/mounts/network.mount

--- a/home/lucas/.local/share/applications/telegram.desktop
+++ b/home/lucas/.local/share/applications/telegram.desktop
@@ -3,7 +3,7 @@ Encoding=UTF-8
 Version=1.0
 Name=Telegram
 Comment=Official desktop version of Telegram messaging app
-Exec=telegram
+Exec=env QT_IM_MODULE=xim telegram
 Icon=telegram
 Terminal=false
 #StartupWMClass=telegram-desktop
