--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -146,7 +146,8 @@ for_window [title="^Governo do Estado de Mato Grosso do Sul"] floating enable
 for_window [title="^Mail do iCloud - Enc"] floating enable
 for_window [title="Filtros de mensagens"] floating enable
 for_window [title="Preferências do Thunderbird"] floating enable
-for_window [title="Biblioteca"] floating enable
+for_window [title="Biblioteca"] floating enable, move position center
+for_window [title="Library"] floating enable, move position center
 for_window [class="^mpv"] floating enable
 for_window [class="^Engrampa"] floating enable
 for_window [class="Tilda"] floating enable; border 1pixel
@@ -253,3 +254,4 @@ exec --no-startup-id /usr/local/bin/xautolock.sh
 exec --no-startup-id /usr/lib/vino/vino-server
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
+exec --no-startup-id dropbox
