--- a/home/lucas/.config/mpv/mpv.conf
+++ b/home/lucas/.config/mpv/mpv.conf
@@ -30,7 +30,7 @@
 ##################
 
 # Specify default video driver (see --vo=help for a list).
-vo=vdpau
+#vo=vdpau
 
 # Start in fullscreen mode by default.
 #fs=yes
