--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -10,6 +10,8 @@ font pango:DejaVu Sans Mono 8
 #100%: FF - 95%: F2 - 90%: E6 - 85%: D9 - 80%: CC - 75%: BF - 70%: B3 - 65%: A6 - 60%: 99 - 55%: 8C - 50%: 80 - 45%: 73 - 40%: 66 - 35%: 59 - 30%: 4D - 25%: 40 - 20%: 33 - 15%: 26 - 10%: 1A - 5%: 0D - 0%: 00
 
 set $branco                 #ffffff
+set $preto					#000000
+set $cinza					#666565
 set $fundo                  #1b1b1b
 set $fundo-inativo          #222222
 set $texto                  #ffffff
@@ -36,9 +38,15 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 bindsym $mod+q kill
 
-bindsym $mod+d exec dmenu_run
-bindsym $mod+g exec echo "" | rofi -dmenu -p "Google:" -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://www.google.com.br/search?q={}
-bindsym $mod+Shift+g exec echo "" | rofi -dmenu -p "DuckDuckGo:" -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://duckduckgo.com/?q={}
+#bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec --no-startup-id "rofi -show drun"
+#bindsym $mod+d exec --no-startup-id "rofi -show combi"
+#bindsym $mod+d exec --no-startup-id "rofi -show run"
+#bindsym $mod+d exec --no-startup-id rofi -show run -bg "#222222" -fg "#2ECC71" -hlbg "#445544" -hlfg "#2EEE71" -bw 4 -eh 1 -font "Noto Mono Regular 11" -opacity "80" -lines 8 -line-margin 4 -width 50 -padding 16
+bindsym $mod+d exec --no-startup-id rofi -show run -bw 4 -eh 1 -font "Noto Mono Regular 11" -opacity "80" -lines 8 -line-margin 4 -width 50 -padding 16
+#bindsym $mod+d exec --no-startup-id "rofi -show run -lines 5 -eh 2 -hide-scrollbar"
+bindsym $mod+g exec --no-startup-id echo "" | rofi -dmenu -p "Google:" -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://www.google.com.br/search?q={}
+bindsym $mod+Shift+g exec --no-startup-id echo "" | rofi -dmenu -p "DuckDuckGo:" -bw 0 -lines 1 -separator-style none -location 0 -width 250 -hide-scrollbar -padding 5 | xargs -I{} xdg-open https://duckduckgo.com/?q={}
 
 bindsym $mod+Shift+x exec i3lock-fancy -f "Iosevka-Thin" -t "Arch Linux" -p -g -- scrot -z | amixer -q -D pulse sset Master mute
 
@@ -87,13 +95,13 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
-# Icones:            
+# Icones:             
 set $workspace1  "1:  "
 set $workspace2  "2:  "
 set $workspace3  "3:  "
 set $workspace4  "4:  "
 set $workspace5  "5:  "
-set $workspace6  "6:  "
+set $workspace6  "6:  "
 set $workspace7  "7:  "
 set $workspace8  "8:  "
 set $workspace9  "9:  "
@@ -160,6 +168,8 @@ for_window [class="^Agave"] floating enable
 for_window [title="Mail do iCloud - Chromium"] floating enable, move position center
 for_window [title="i3 Wallpaper"] floating enable, move position center
 for_window [title="About Mozilla Firefox"] floating enable, move position center
+for_window [title="Sobre o Mozilla Firefox"] floating enable, move position center
+for_window [class="File-roller"] floating enable, move position center
 
 assign [class="^Chromium"] $workspace1
 assign [class="Firefox"] $workspace1
@@ -171,7 +181,9 @@ assign [class="^Thunar"] $workspace4
 assign [class="^Gimp"] $workspace5
 assign [class="^Inkscape"] $workspace5
 assign [class="^Lxappearance"] $workspace5
-assign [class="^Steam"] $workspace6
+assign [class="^Deadbeef"] $workspace6
+assign [class="^Gmpc"] $workspace6
+#assign [class="^Steam"] $workspace6
 #assign [class="^mpv"] $workspace6
 assign [class="^Deluge"] $workspace7
 assign [class="^Thunderbird"] $workspace8
@@ -180,6 +192,9 @@ assign [class="^Whatsie"] $workspace9
 assign [class="^Hexchat"] $workspace9
 assign [class="^Gtkman"] $workspace10
 assign [class="^Mate-disk-usage-analyzer"] $workspace10
+#assign [class="^Pamac-updater"] $workspace10
+#assign [class="^Pamac-manager"] $workspace10
+assign [class="^Pamac*"] $workspace10
 
 #bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
 #-b 'config' 'i3-msg exec pluma ~/.config/i3/config' \
@@ -234,12 +249,15 @@ bar {
 	colors {
 		statusline		$branco
 		background		$transparente
-		separator		$separador
+		separator		$branco
 
 		#					borda			fundo			texto
-		focused_workspace	$transparente	$transparente	$texto-ativo
-		inactive_workspace	$transparente	$transparente	$texto-inativo
-		urgent_workspace	$transparente	$transparente	$texto-urgente
+		#focused_workspace	$transparente	$transparente	$texto-ativo
+		#inactive_workspace	$transparente	$transparente	$texto-inativo
+		#urgent_workspace	$transparente	$transparente	$texto-urgente
+		focused_workspace	$transparente	$transparente	$cinza
+		inactive_workspace	$transparente	$transparente	$branco
+		urgent_workspace	$transparente	$transparente	$texto-urgente		
     }
 }
 
