--- a/home/lucas/.config/mpv/mpv.conf
+++ b/home/lucas/.config/mpv/mpv.conf
@@ -31,6 +31,7 @@
 
 # Specify default video driver (see --vo=help for a list).
 #vo=vdpau
+ao=pulse
 
 # Start in fullscreen mode by default.
 #fs=yes
