modified:   etc/systemd/user.conf 	modified:   home/lucas/.xprofile

--- a/etc/systemd/user.conf
+++ b/etc/systemd/user.conf
@@ -26,7 +26,7 @@
 #DefaultStartLimitIntervalSec=10s
 #DefaultStartLimitBurst=5
 #DefaultEnvironment=
-DefaultEnvironment="PATH=$HOME/bin/:$PATH" PROMPT_COMMAND="${PROMPT_COMMAND:+$PROMPT_COMMAND'\n'};history -a;history -c;history -r" TERMINAL=termite BROWSER=firefox-developer
+#DefaultEnvironment=
 #DefaultLimitCPU=
 #DefaultLimitFSIZE=
 #DefaultLimitDATA=
