--- a/home/lucas/.config/compton.conf
+++ b/home/lucas/.config/compton.conf
@@ -84,6 +84,7 @@ shadow-exclude = [
     "! name~=''",
     "name = 'Notification'",
     "name = 'Plank'",
+    "name = 'Notes'",
     "name = 'Docky'",
     "name = 'Kupfer'",
     "name = 'xfce4-notifyd'",
