--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -12,6 +12,7 @@ font pango:DejaVu Sans Mono 8
 set $branco                 #ffffff
 set $preto					#000000
 set $cinza					#8c8b8b
+set $azul					#3465a4
 set $fundo                  #1b1b1b
 set $fundo-inativo          #222222
 set $texto                  #ffffff
@@ -151,8 +152,17 @@ for_window [urgent="latest"] focus
 # move [absolute] position <pos_x> [px] <pos_y> [px]
 # 1920 x 1080
 # move position center
+
+for_window [window_role="pop-up"] floating enable, move position center
+for_window [window_role="bubble"] floating enable, move position center
+for_window [window_role="task_dialog"] floating enable, move position center
+for_window [window_role="Preferences"] floating enable, move position center
+
+for_window [window_type="dialog"] floating enable, move position center
+for_window [window_type="menu"] floating enable, move position center
+
+for_window [class="(mpv|Catfish|Engrampa|File-roller|Notes|Agave|Viewnior|Pavucontrol|Galculator)"] floating enable, move position center
 for_window [class="^VirtualBox" title="*Executando*"] floating enable
-for_window [class="^Catfish"] floating enable
 for_window [class="^etcher-electron"] floating enable
 for_window [class="^Skype"] floating enable
 for_window [title="^Governo do Estado de Mato Grosso do Sul"] floating enable
@@ -161,28 +171,17 @@ for_window [title="Filtros de mensagens"] floating enable
 for_window [title="Preferências do Thunderbird"] floating enable
 for_window [title="Biblioteca"] floating enable, move position center
 for_window [title="Library"] floating enable, move position center
-for_window [class="^mpv"] floating enable
-for_window [class="^Engrampa"] floating enable
-for_window [class="Tilda"] floating enable; border 1pixel
 for_window [title="^DownThemAll"] floating enable
 for_window [title="DownThemAll!$"] move window to scratchpad
-for_window [class="^Galculator"] floating enable
-for_window [class="^Pavucontrol"] floating enable
-for_window [class="^Viewnior"] floating enable
-for_window [class="^Agave"] floating enable
 for_window [title="Mail do iCloud - Chromium"] floating enable, move position center
 for_window [title="i3 Wallpaper"] floating enable, move position center
 for_window [title="About Mozilla Firefox"] floating enable, move position center
 for_window [title="Sobre o Mozilla Firefox"] floating enable, move position center
-for_window [class="File-roller"] floating enable, move position center
 for_window [title="Lista de amigos"] floating enable, move absolute position 1667 px 0 px, resize set 250 px 400 px
 
-assign [class="^Chromium"] $workspace1
-assign [class="Firefox"] $workspace1
-assign [class="Termite"] $workspace2
-assign [class="Pluma"] $workspace3
-assign [class="Sublime_text"] $workspace3
-assign [class="^Atom"] $workspace3
+assign [class="^(Chromium|Firefox|firefox-developer)"] $workspace1
+assign [class="(Termite|Tilix)"] $workspace2
+assign [class="(Pluma|Sublime_text|Atom)"] $workspace3
 assign [class="^Thunar"] $workspace4
 assign [class="^Gimp"] $workspace5
 assign [class="^Inkscape"] $workspace5
@@ -200,7 +199,7 @@ assign [class="^Gtkman"] $workspace10
 assign [class="^Mate-disk-usage-analyzer"] $workspace10
 #assign [class="^Pamac-updater"] $workspace10
 #assign [class="^Pamac-manager"] $workspace10
-assign [class="^Pamac*"] $workspace10
+assign [class="(^Pamac*|Notes)"] $workspace10
 
 #bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
 #-b 'config' 'i3-msg exec pluma ~/.config/i3/config' \
@@ -254,14 +253,14 @@ bar {
     strip_workspace_numbers yes
 	colors {
 		statusline		$branco
-		background		$transparente
+		background		$semitransparente
 		separator		$cinza
 
 		#					borda			fundo			texto
 		#focused_workspace	$transparente	$transparente	$texto-ativo
 		#inactive_workspace	$transparente	$transparente	$texto-inativo
 		#urgent_workspace	$transparente	$transparente	$texto-urgente
-		focused_workspace	$transparente	$transparente	$preto
+		focused_workspace	$transparente	$transparente	$azul
 		inactive_workspace	$transparente	$transparente	$cinza
 		urgent_workspace	$transparente	$transparente	$texto-urgente		
     }
@@ -279,3 +278,4 @@ exec --no-startup-id /usr/lib/vino/vino-server
 exec --no-startup-id xset r rate 300 75
 exec --no-startup-id thunar --daemon
 exec --no-startup-id dropbox
+exec --no-startup-id notes
