--- a/home/lucas/.tmux.conf
+++ b/home/lucas/.tmux.conf
@@ -68,5 +68,21 @@ send-keys -t:9 'man tmux' C-m
 # Troca o índice de 0 pra 1
 select-window -t 1
 
-source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+#source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
 #source "/usr/share/tmux/powerline.conf"
+
+# TPM
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Nord Theme
+# https://github.com/arcticicestudio/nord-tmux
+set -g @plugin 'arcticicestudio/nord-tmux'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
