--- a/home/lucas/.config/i3/cores.conf
+++ b/home/lucas/.config/i3/cores.conf
@@ -1,9 +1,10 @@
-#min: #00FF00 med1: #FFF600 med2: #FFAE00 max: #FF0000
-# Old ativo='#3465a4' urgente='#cc5252' cormin='#3465a4' cormed='#FFFC00' cormax='#FF0000'
-
 ativo='#3465a4'
 urgente='#cc5252'
 cormin='#00FF00'
 cormed='#FFF600'
 cormed2='#FFAE00'
 cormax='#FF0000'
+
+verde='#a3be8c'
+amarelo='#ebcb8b'
+vermelho='#bf616a'
