--- a/home/lucas/.config/i3blocks/old/i3blocks2.conf
+++ b/home/lucas/.config/i3blocks/old/i3blocks2.conf
@@ -1,9 +1,14 @@
 command=~/.config/i3/scripts/$BLOCK_NAME
-full_text=〉
-#full_text=
+#full_text=〉
+#full_text=
+#full_text=
+full_text=
+align=center
+#color=#8c8c8c
+color=#ffffff
+separator=false
 separator_block_width=7
 markup=none
-separator=false
 
 #[firefox]
 #command=bash -c 'echo ""; if [ "$BLOCK_BUTTON" == 1 ]; then i3-msg exec firefox &> /dev/null; elif [ "$BLOCK_BUTTON" -gt 1 ]; then killall firefox; fi'
@@ -81,16 +86,15 @@ interval=60
 
 [separator]
 
-[date]
-label=
-command=date '+%d/%m/%Y'
-interval=5
+#[date]
+#label=
+#command=date '+%d/%m/%Y' ; date '+%d/%m/%Y' ; echo ""
+#interval=5
 
-[separator]
+#[separator]
 
-[time]
+[hora]
 label=
-command=date '+%H:%M'
 interval=5
 
 [separator]
@@ -103,13 +107,13 @@ signal=10
 [separator]
 
 [apps]
-command=bash -c 'echo " "; if [ "$BLOCK_BUTTON" == 1 ]; then bash ~/.config/rofi/scripts/apps &> /dev/null; fi'
+command=bash -c 'echo " "; echo " "; echo ""; if [ "$BLOCK_BUTTON" == 1 ]; then bash ~/.config/rofi/scripts/apps &> /dev/null; fi'
 interval=once
 separator=false
 separator_block_width=5
 
 [config]
-command=bash -c 'echo " "; if [ "$BLOCK_BUTTON" == 1 ]; then bash ~/.config/rofi/scripts/configs &> /dev/null; fi'
+command=bash -c 'echo " "; echo " "; echo ""; if [ "$BLOCK_BUTTON" == 1 ]; then bash ~/.config/rofi/scripts/configs &> /dev/null; fi'
 interval=once
 separator=false
 separator_block_width=5
@@ -130,6 +134,6 @@ separator=false
 separator_block_width=5
 
 [shutdown]
-command=bash -c 'echo " "; if [ "$BLOCK_BUTTON" == 1 ]; then bash ~/.config/rofi/scripts/power &> /dev/null; fi'
+command=bash -c 'echo " "; echo " "; echo ""; if [ "$BLOCK_BUTTON" == 1 ]; then bash ~/.config/rofi/scripts/power &> /dev/null; fi'
 interval=once
 separator_block_width=5
