--- a/home/lucas/.config/i3/cores.conf
+++ b/home/lucas/.config/i3/cores.conf
@@ -5,6 +5,13 @@ cormed='#FFF600'
 cormed2='#FFAE00'
 cormax='#FF0000'
 
+# Nord
+azul='#88c0d0'
+azul2='#81a1c1'
+azul3='#5e81ac'
 verde='#a3be8c'
+verde2='#8fbcbb'
 amarelo='#ebcb8b'
 vermelho='#bf616a'
+laranja='#d08770'
+roxo='#b48ead'
